fix: spine covers size in responsive

--- a/proyecto-final/src/layout/Home/HomePage.css
+++ b/proyecto-final/src/layout/Home/HomePage.css
@@ -194,7 +194,7 @@
   }
 
   .game-container {
-    padding: 0.5rem;
+    padding: 0.3rem;
     position: relative;
     display: flex;
     justify-content: center;
@@ -244,6 +244,7 @@
   
   .ranking-s {
     display: block;
+    margin-bottom: 0.1rem;
   }
 
 }
